--- a/binary/CMakeLists.txt
+++ b/binary/CMakeLists.txt
@@ -1,2 +1,5 @@
-# 指定生成目标
+include_directories(../libs)
+
 add_executable(Grid main.cc)
+
+target_link_libraries(Grid cli runtime ${Boost_LIBRARIES})
