--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ on: [push]
 
 jobs:
   code-style-check:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -23,17 +22,19 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-
+    container: veiasai/grid-env:1.0
+  
     steps:
     - uses: actions/checkout@v2
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
+      working-directory: ${{runner.workspace}}
       run: |
-        cmake -E make_directory ${{runner.workspace}}/build
-        cmake -E make_directory ${{runner.workspace}}/build/debug
-        cmake -E make_directory ${{runner.workspace}}/build/release
+        cmake -E make_directory build
+        cmake -E make_directory build/debug
+        cmake -E make_directory build/release
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
