--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,25 +7,9 @@ on:
 name: Create Release
 
 jobs:
-  code-style-check:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install cpplint
-    - name: Analysing the code with cpplint
-      run: |
-        cpplint --recursive .
-
   build:
     runs-on: ubuntu-latest
+    container: veiasai/grid-env:1.0
 
     steps:
     - uses: actions/checkout@v2
@@ -33,9 +17,11 @@ jobs:
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
+      shell: bash
+      working-directory: ${{runner.workspace}}
       run: |
-        cmake -E make_directory ${{runner.workspace}}/build
-        cmake -E make_directory ${{}}
+        cmake -E make_directory build
+        cmake -E make_directory build/release
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
