--- a/binary/CMakeLists.txt
+++ b/binary/CMakeLists.txt
@@ -2,4 +2,4 @@ include_directories(../libs)
 
 add_executable(Grid main.cc)
 
-target_link_libraries(Grid cli runtime ${Boost_LIBRARIES})
+target_link_libraries(Grid cli runtime ${Boost_LIBRARIES} glog::glog)
