--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,9 @@ jobs:
     container: veiasai/grid-env:1.0
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v1
+      with:
+        submodules: 'true'
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
