--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,11 +56,11 @@ jobs:
         cmake --build . --config debug
 
     - name: Test Debug
-      working-directory: ${{runner.workspace}}/build/debug
+      working-directory: ${{runner.workspace}}/build/debug/tests
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C debug
+      run: ctest
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
@@ -79,9 +79,9 @@ jobs:
       run: cmake --build . --config release
 
     - name: Test Release
-      working-directory: ${{runner.workspace}}/build/release
+      working-directory: ${{runner.workspace}}/build/release/tests
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C release
+      run: ctest
 
