--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,11 +42,11 @@ jobs:
       run: cmake --build . --config release
 
     - name: Test Release
-      working-directory: ${{runner.workspace}}/build/release
+      working-directory: ${{runner.workspace}}/build/release/tests
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C release
+      run: ctest
 
   release:
     runs-on: ubuntu-latest
