--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "externals/glog"]
 	path = externals/glog
 	url = https://github.com/google/glog.git
+[submodule "externals/gtest"]
+	path = externals/gtest
+	url = https://github.com/google/googletest.git
