--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,11 @@ jobs:
         pip install cpplint
     - name: Analysing the code with cpplint
       run: |
-        cpplint --recursive .
+        cpplint --recursive --exclude=externals/ .
 
   build:
     runs-on: ubuntu-latest
-    container: veiasai/grid-env:1.0
+    container: xiangyuxin/grid-env:2.0
   
     steps:
     - uses: actions/checkout@v1
