--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,5 +8,8 @@ target_link_libraries(unit_test PRIVATE gtest)
 target_link_libraries(unit_test PRIVATE gmock)
 target_link_libraries(unit_test PRIVATE runtime)
 target_link_libraries(unit_test PRIVATE cli)
-
+target_link_libraries(unit_test PRIVATE stdc++fs)
+target_link_libraries(unit_test PRIVATE ${Boost_LIBRARIES})
 gtest_discover_tests(unit_test)
+configure_file(./bundle/config.json ../tests/bundle/config.json COPYONLY)
+configure_file(./config/gridConfig.json ../tests/config/gridConfig.json COPYONLY)
