--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,3 +13,4 @@ target_link_libraries(unit_test PRIVATE ${Boost_LIBRARIES})
 gtest_discover_tests(unit_test)
 configure_file(./bundle/config.json ../tests/bundle/config.json COPYONLY)
 configure_file(./config/gridConfig.json ../tests/config/gridConfig.json COPYONLY)
+configure_file(./create_container.sh ../tests/create_container.sh COPYONLY)
