struct containerdir; mount namespace; modify test; cmake: copy file to build

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,3 +14,5 @@ gtest_discover_tests(unit_test)
 configure_file(./bundle/config.json ../tests/bundle/config.json COPYONLY)
 configure_file(./config/gridConfig.json ../tests/config/gridConfig.json COPYONLY)
 configure_file(./create_container.sh ../tests/create_container.sh COPYONLY)
+configure_file(./remove_container.sh ../tests/remove_container.sh COPYONLY)
+configure_file(./mount_mntFolder.sh ../tests/mount_mntFolder.sh COPYONLY)
