--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ./unit_test
+      run: sudo ./unit_test
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
@@ -66,5 +66,5 @@ jobs:
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ./unit_test
+      run: sudo ./unit_test
 
